# magnav.py

./: README.md  check_imports.py  debug_get_map.txt  magnav_py_error_analysis_report.md  pyproject.toml  requirements.txt
artifacts_data/sgl_fields/sgl_fields/: ._fields_sgl_160.csv  ._fields_sgl_2020.csv  ._fields_sgl_2021.csv  fields_sgl_160.csv
artifacts_data/util_files/util_files/: ._color_scale_usgs.csv  color_scale_usgs.csv  icon_circle.dae
docs/: Makefile  make.bat
docs/source/: api_functions.rst  api_reference.rst  comp.rst  conf.py  data.rst  index.rst  maps.rst  nav.rst  status.rst
docs/source/_static/: .gitkeep
magnavpy/: aircraft.py  analysis_util.py  common_types.py  compensation.py  compensation_old.py  constants.py  core_utils.py  create_xyz.py  dcm_util.py  ekf.py  end_to_end.py  eval_filt.py  fdm_util.py  google_earth.py  magnav.py  map_fft.py  map_utils.py  model_functions.py  mpf.py  nav_utils.py  nekf.py  plot_functions.py  rt_comp_main.py  signal_util.py  tolles_lawson.py  xyz2h5.py
src/: common_types.py  compensation.py  create_xyz.py  ekf.py  magnav.py  model_functions.py  plot_functions.py
tests/: __init__.py  test_analysis_util.py  test_baseline_plots.py  test_compensation.py  test_create_xyz.py  test_dcm.py  test_ekf_crlb.py  test_ekf_online.py  test_ekf_online_nn.py  test_eval_filt.py  test_get_map.py  test_get_xyz.py  test_google_earth.py  test_map_fft.py  test_map_functions.py  test_model_functions.py  test_mpf.py  test_nekf.py  test_tolles_lawson.py  test_xyz2h5.py
